--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+.timerbody {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  min-width: 100vw;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgb(125,50,250);
+}
+
+.clock {
+  font-size: 4em;
+  color: whitesmoke;
+}
+
+.clockbuttons {
+  min-width: 50vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
