--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,7 +35,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .timerbody {
   display: flex;
@@ -50,6 +50,7 @@
 .clock {
   font-size: 4em;
   color: whitesmoke;
+  text-align: center;
 }
 
 .clockbuttons {
@@ -58,4 +59,24 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+}
+
+.menu-content {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(225,180,255);
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+.menu-route-card {
+  padding: 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.menu-header {
+  background: black;
 }
